# risk_bank

./: .env  README.md  docker-compose.yml  pyproject.toml
apps/api/: main.py
apps/dashboard/: app.py
core/: db.py  models.py  risk.py  settings.py
pipelines/: audit_semantic_map.py  ingest_ifdata.py  normalize_ifdata.py  probe_ifdata.py  risk_score.py  seed_demo.py
